# estudos_de_dados

./: .gitignore  README.md  pyproject.toml
livro_ml/: capitulo_10.ipynb  capitulo_11.ipynb  capitulo_12.ipynb  capitulo_13.ipynb  capitulo_2.ipynb  capitulo_3.ipynb  capitulo_4.ipynb  capitulo_5.ipynb  capitulo_6.ipynb  capitulo_7.ipynb  capitulo_8.ipynb  capitulo_9.ipynb
livro_ml/images/ensembles/: moons.dot  moons_florest.dot  tree_reg1.dot  tree_reg2.dot
testes/: testes_1.ipynb
