[tool.poetry]
name = "estudos-de-dados"
version = "0.1.0"
description = ""
authors = ["João <oliveira.joaovtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
taskipy = "^1.13.0"
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^24.4.2"}

[tool.taskipy.tasks]
# lint = ''
format = 'isort . && black .'
# run = 'python .\pynapse\main.py'
# pre_test = 'task lint'
# test = 'pytest -s -x --cov=pynapse -vv'
# post_test = 'coverage html'1

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
